fix: EFREI logo path

--- a/thesis.tex
+++ b/thesis.tex
@@ -152,7 +152,7 @@
 %\documentclass[english, 12pt, a4paper, elec, utf8, a-2b, print, twoside]{aaltothesis}
 
 \renewcommand{\AaltoLogoSmall}[3]{%
-    \includegraphics[width=0.3\textwidth]{./EFREI.png} % Replace with your logo path
+    \includegraphics[width=0.3\textwidth]{./figures/logos/EFREI.png} % Replace with your logo path
 }
 
 %% Use the following options in the \documentclass macro above:
