feat: finished the Sui part introduction and added references

--- a/references/references.bib
+++ b/references/references.bib
@@ -1,15 +1,48 @@
+@article{werth2023review,
+  author = {Werth, Jan and Berenjestanaki, Mohammad Hajian and Barzegar, Hamid R and El Ioini, Nabil and Pahl, Claus},
+  title = {A Review of Blockchain Platforms Based on the Scalability, Security and Decentralization Trilemma},
+  journal = {ICEIS (1)},
+  year = {2023},
+  pages = {146--155}
+}
+
 @misc{suiobjects,
   author = {Mysten Labs},
   title = {All About Objects},
-  year = {2023},
+  howpublished = {Online article},
   url = {https://blog.sui.io/all-about-objects/},
-  note = {Published: May 23, 2023. Accessed: 2025-01-08}
+  year = {2023},
+  note = {Accessed: 2025-01-08}
 }
 
-@article{werth2023review,
-  title={A Review of Blockchain Platforms Based on the Scalability, Security and Decentralization Trilemma.},
-  author={Werth, Jan and Berenjestanaki, Mohammad Hajian and Barzegar, Hamid R and El Ioini, Nabil and Pahl, Claus},
-  journal={ICEIS (1)},
-  pages={146--155},
-  year={2023}
+@article{rust_ownership,
+  author = {Crichton, Will},
+  title = {The usability of ownership},
+  journal = {arXiv preprint arXiv:2011.06171},
+  year = {2020}
+}
+
+@misc{sui_fees,
+  author = {Mysten Labs},
+  title = {Delivering Fair Gas Fees Through Resource Usage Metering},
+  howpublished = {Online article},
+  url = {https://blog.sui.io/computation-costs-gas-fee-model/},
+  year = {2023},
+  note = {Accessed: 2025-01-08}
+}
+
+@misc{phalcon_explorer,
+  author = {BlockSec},
+  title = {Phalcon Explorer | Security Incidents},
+  howpublished = {Online application},
+  url = {https://app.blocksec.com/explorer/security-incidents},
+  year = {2024},
+  note = {Accessed: 2024-12-16}
+}
+
+@misc{rekt,
+  author = {Rekt},
+  title = {Rekt | Home},
+  howpublished = {Online articles},
+  url = {https://rekt.news/}
 }
